@@ -76,6 +76,14 @@ public class StartServerMojo
     private String maximumMemory = null;
     
     /**
+     * Set the maximum permsize for the forked JVM.
+     *
+     * @parameter expression="${maxPermSize}"
+     */
+    private String maxPermSize = null;
+    
+    
+    /**
      * The location of the Java Virtual Machine executable to launch the server with.
      *
      * @parameter
@@ -184,6 +192,12 @@ public class StartServerMojo
 
         if (maximumMemory != null) {
             java.setMaxmemory(maximumMemory);
+        }
+        
+        if (maxPermSize !=null){    
+            java.createJvmarg().setValue("-XX:MaxPermSize="+maxPermSize);         
+        } else {           
+            java.createJvmarg().setValue("-XX:MaxPermSize=128m");    
         }
 
         // Load the Java programming language agent for JPA
